@@ -16,6 +16,7 @@
 SOURCE_READER ch.ehi.fme.Main \
  MODELS "$(MODELS)"\
  MODEL_DIR "$(MODEL_DIR)"\ 
+ CHECK_UNIQUEOID "$(CHECK_UNIQUEOID)"\
  CREATE_LINETABLES "$(CREATE_LINETABLES)"\ 
  SKIP_POLYGONBUILDING  "$(SKIP_POLYGONBUILDING)"\
  INHERITANCE_MAPPING  "$(INHERITANCE_MAPPING)"\
@@ -65,6 +66,8 @@ DEFAULT_VALUE MODELS "%DATA"
 GUI TEXT MODELS Models:
 DEFAULT_VALUE MODEL_DIR "%XTF_DIR;$(FME_HOME)plugins/interlis2/ilimodels;$(FME_HOME)plugins/interlis2/ili22models"
 GUI TEXT MODEL_DIR Models directory:
+DEFAULT_VALUE CHECK_UNIQUEOID "No"
+GUI CHOICE CHECK_UNIQUEOID Yes%No Check TID/OID uniqueness:
 DEFAULT_VALUE CREATE_LINETABLES "No"
 GUI CHOICE CREATE_LINETABLES Yes%No Create Linetables:
 DEFAULT_VALUE SKIP_POLYGONBUILDING "No"
