@@ -92,6 +92,7 @@ public class Ili2Reader implements IFMEReader {
 	private String ili1ConvertArea=null;
 	private boolean ili1EnumAsItfCode=false;
 	private int createEnumTypes=CreateEnumFeatureTypes.NO; 
+	private boolean checkUniqueOid=false; 
 	public Ili2Reader(IFMESession session1,IFMEMappingFile mappingFile1,String keyword,IFMELogFile log){
 		mappingFile=mappingFile1;
 		readerKeyword=keyword;
@@ -217,6 +218,9 @@ public class Ili2Reader implements IFMEReader {
 			}else if(arg.equals(Main.CREATEFEATURETYPE4ENUM )){
 				i++;
 				createEnumTypes=CreateEnumFeatureTypes.valueOf((String)args.get(i));
+			}else if(arg.equals(Main.CHECK_UNIQUEOID)){
+				i++;
+				checkUniqueOid=FmeUtility.isTrue((String)args.get(i));
 			}else{
 				// skip this argument
 			}
@@ -248,9 +252,12 @@ public class Ili2Reader implements IFMEReader {
 					createEnumTypes=CreateEnumFeatureTypes.valueOf((String)ele.get(1));
 				}else if(val.equals(readerKeyword+"_"+Main.ILI1_ENUMASITFCODE)){
 					ili1EnumAsItfCode=FmeUtility.isTrue((String)ele.get(1));
+				}else if(val.equals(readerKeyword+"_"+Main.CHECK_UNIQUEOID)){
+					checkUniqueOid=FmeUtility.isTrue((String)ele.get(1));
 				}
 			}
 		}
+		EhiLogger.logState("checkUniqueOid <"+checkUniqueOid+">");
 		EhiLogger.logState("createLineTables <"+createLineTableFeatures+">");
 		EhiLogger.logState("skipPolygonBuilding <"+skipPolygonBuilding+">");
 		EhiLogger.logState("inheritanceMapping <"+InheritanceMapping.toString(inheritanceMapping)+">");
@@ -401,6 +408,9 @@ public class Ili2Reader implements IFMEReader {
 		}
 		iliQNameSize+=1;
 		
+		if(checkUniqueOid){
+			checkoids=new HashMap();
+		}
 		// ASSERT: ready to scan schema or read data
 	}
 
@@ -448,6 +458,7 @@ public class Ili2Reader implements IFMEReader {
 		}
 		return null;
 	}
+	HashMap checkoids=null; // new HashMap();
 	private IFMEFeature myread(IFMEFeature ret) 
 		throws Exception 
 	{
@@ -502,6 +513,14 @@ public class Ili2Reader implements IFMEReader {
 				if(event instanceof ObjectEvent){
 					ObjectEvent oe=(ObjectEvent)event;
 					IomObject iomObj=oe.getIomObject();
+					if(checkoids!=null){
+						String oid=iomObj.getobjectoid();
+						if(checkoids.containsKey(oid)){
+							EhiLogger.logError(iomObj.getobjecttag()+" at line "+iomObj.getobjectline()+": duplicate oid "+oid+" (same as at line "+((Integer)checkoids.get(oid)).toString()+")");
+						}else{
+							checkoids.put(oid, new Integer(iomObj.getobjectline()));
+						}
+					}
 					//EhiLogger.debug("iomObj "+iomObj.toString());
 					// translate object
 					try{
