@@ -1,6 +1,8 @@
 ili2fme 5.0.0 (2008-11-xx) 
 ---------------------------
 - read enum values (see parameter CREATEFEATURETYPE4ENUM)
+- check uniqueness of TID/OIDs (see param CHECK_UNIQUEOID)
+- write gml (3.2) according to iligml encoding spec
 - added *.ili to file selector
 - added *.gml to file selector
 
